# pn532-card-reader-playground

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  memory.x  rust-toolchain.toml  test.txt
.cargo/: config.toml
src/: main.rs  ndef.rs  reader.rs
src/driver/: i2c.rs  mod.rs  protocol.rs  spi.rs
test/: README.md  ndef1.dump  ndef1.dump.hex
