[package]
name = "vat-card-reader"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"

panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.2.0", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
#embassy-futures = { version = "0.1.0", default-features = false }
embassy-time = { version = "0.1.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", features = ["nightly", "defmt", "unstable-pac", "stm32l432kc", "time-driver-any", "exti", "unstable-traits"] }
embassy-embedded-hal = { version = "0.1.0" }

embedded-hal-async = { version = "0.2.0-alpha.1" }

cortex-m-rt = "0.7"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }

#pn532 = { version = "0.3.1" }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "f4ade6af8bb2571ce2de0531d9c9715a7b8b941c" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "f4ade6af8bb2571ce2de0531d9c9715a7b8b941c" }
embassy-hal-common = { git = "https://github.com/embassy-rs/embassy.git", rev = "f4ade6af8bb2571ce2de0531d9c9715a7b8b941c" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", rev = "f4ade6af8bb2571ce2de0531d9c9715a7b8b941c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "f4ade6af8bb2571ce2de0531d9c9715a7b8b941c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "f4ade6af8bb2571ce2de0531d9c9715a7b8b941c" }

pn532 = { path = "../pn532" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false